# hltvapi.rs

./: .dockerignore  .env.sample  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .stylelintrc.json  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  cypress.json  openapi.yaml  package-lock.json  package.json  posthtml.config.js  tailwind.config.js  task-definition.json  webpack.common.js  webpack.dev.js  webpack.prod.js
.github/workflows/: build.yml  code_quality.yml  containerize.yml  coverage.yml  release.yml  security.yml  test.yml  workflow_run_pruner.yml
benches/: my_benchmark.rs
copilot/: .workspace
copilot/hltvapi/: manifest.yml
docs/: digitalocean-agent.list  example.fixtures.ical  example.news.opml.xml  hltvapi.postman_collection.json  icon.xcf  logo.xcf  proxy.txt  scraped_matches.html  scraped_news-item.html  scraped_news-list.html
migrations/2021-07-04-230126_create_news/: down.sql  up.sql
migrations/2021-07-04-230130_create_fixtures/: down.sql  up.sql
src/: assets.rs  constants.rs  database.rs  errors.rs  logging.rs  main.rs  schema.rs
src/handlers/: mod.rs
src/models/: fixture.rs  mod.rs  news.rs  version.rs
src/services/: fixtures.rs  mod.rs  news.rs
src/snapshots/: hltvapi__tests__startup_ok.snap
tests/: integration_test.rs  scraped.fixtures_all.example.html  scraped.fixtures_toptier.example.html  scraped.news_all.example.html  scraped.news_item.example.html
web/: index.js  style.css
web/templates/: base.tera.html  calendar.tera.html  docs.tera.html  landing.tera.html  news.tera.html  (+1 more)
(+6 files in other folders)
