# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hltvapi"
version = "0.6.6"
authors = ["Fabio Tea <iam@f4b.io>"]
edition = "2021"
license-file = "LICENSE"
homepage = "https://hltvapi.f4b.io"

[dependencies]
actix-rt = "2.3.0"
actix-http = "3.0.0-beta.11"
actix-web = "4.0.0-beta.10"
actix-files = "0.6.0-beta.8"
serde = "1.0.130"
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono", "uuidv07"] }
libsqlite3-sys = { version = ">=0.8.0, <0.23.0", optional = true, features = ["bundled"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
scraper = "0.12.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
tokio = { version = "1.12.0", features = ["full"] }
itconfig = "1.1.1"
clokwerk = "0.4.0-rc1"
lazy_static = "1.4.0"
mime = "0.3.16"
tracing = "0.1.29"
tracing-actix-web = "0.5.0-beta.1"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.0"
tracing-log = "0.1.2"
rss = "2.0.0"
openssl = "0.10.37"
openssl-probe = "0.1.4"
include_dir = "0.6.2"
tera = "1.13.0"
icalendar = "0.10.0"
rand = "0.8.4"
mime_guess = "2.0.3"

[dev-dependencies]
insta = "1.8.0"
fake = "2.4.1"
listenfd = "0.3.5"
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false
